<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="network.o3.o3wallet.Onboarding.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/footnote_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wipTextView" />

    <EditText
        android:id="@+id/wipTextView"
        style="@style/RegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginKeyTitle" />

    <TextView
        android:id="@+id/loginKeyTitle"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:text="@string/your_private_key_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/primary_button_background"
        android:text="@string/login_login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/loginScanButton"
        style="@style/BorderLessButton"
        android:layout_width="69dp"
        android:layout_height="34dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="@+id/loginKeyTitle"
        app:layout_constraintEnd_toEndOf="@+id/wipTextView"
        app:layout_constraintTop_toTopOf="@+id/loginKeyTitle" />
</android.support.constraint.ConstraintLayout>
